Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.15-dev-5677-gf691efe https://github.com/reactos/reactos/commit/f691efefc26ef554e9715abfa1916527277599bb
Description
CORE-12882 is reproduced again in BootCD.
Attachments
Issue Links
- blocks
-
CORE-17612 [SHELL32] ShellExecCmdLine(), RunDlg does not accept calling a batch file without extension
-
- Resolved
-
- clones
-
CORE-12882 "Win+R fonts" doesn't open the Fonts folder
-
- Resolved
-
- is duplicated by
-
CORE-19199 Regression:[most likely SHLWAPI] ShellExecCmdLine(), RunDlg does not accept "fonts" anymore
-
- Resolved
-